documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;

typedef struct
{
	MSGADDR	addr;
	ULONG	data;
} MSGSTRUCT;

typedef struct
{
	USHORT	vercount;
	USHORT	timestampl;
	USHORT	timestamph;
	USHORT	activity;
	ULONG   data;
	USHORT  wordnum;       //ARINC 717 records only
	USHORT  subframe;      //ARINC 717 records only
	USHORT  superframe;    //ARINC 717 records only
} SEQRECORD;

typedef struct
{
    USHORT msgopt;              //User writes message options
    USHORT msgact;              //Card writes message activity
    union {
		ULONG  msgdata;         //Card/User writes message data (Rcv/Xmt)
		ULONG  listptr;         //User writes list buffer pointer
	};
    union {
		ULONG  timetag;         //Card writes time tag
		ULONG  hitcount;        //Card writes hit count
	};
	union {
		ULONG  maxtime;			//Card writes max time
		ULONG  elapsetime;      //Card writes elapsed time
    };
	ULONG  mintime;	            //Card writes min time
    ULONG  userptr;             //User writes user code pointer
    ULONG  miscptr;             //User writes misc. pointer
    ULONG  rsvd;	            //Reserved
} MSGFIELDS;