documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

using System;
using System.Runtime.InteropServices;

namespace BALLARD
{
    public class L43W32
    {
        /**
        *
        *  LP429-3 and LC429-3 WIN32 DRIVER  Version 2.0.1  (05/27/2009)
        *  Copyright (c) 1998-2009
        *  Ballard Technology, Inc.
        *  www.ballardtech.com
        *  support@ballardtech.com
        *  ALL RIGHTS RESERVED
        *
        *  NAME:   L43W32NET.CS -- 32-bit
        *                      L43 Driver Include Header File.
        *
        **/

        /**
        *
        *  Structs used by the L43 Driver.
        *
        **/

        [StructLayout(LayoutKind.Sequential)]
        public struct MSGSTRUCT
        {
            public UInt32 addr;
            public UInt32 data;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORD
        {
            public UInt16 vercount;
            public UInt16 timestampl;
            public UInt16 timestamph;
            public UInt16 activity;
            public UInt32 data;
            public UInt16 wordnum;       //ARINC 717 records only
            public UInt16 subframe;      //ARINC 717 records only
            public UInt16 superframe;    //ARINC 717 records only
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct MSGFIELDS
        {
            public UInt16 msgopt;              //User writes message optionvals
            public UInt16 msgact;              //Card writes message activity
            public UInt32 msgdata_listptr; //Card/User writes message data (Rcv/Xmt) - //User writes list buffer pointer
            public UInt32 timetag_hitcount; //Card writes time tag - //Card writes hit count
            public UInt32 maxtime_elapsetime; //Card writes max time - //Card writes elapsed time
            public UInt32 mintime;             //Card writes min time
            public UInt32 userptr;             //User writes user code pointer
            public UInt32 miscptr;             //User writes misc. pointer
            public UInt32 rsvd;             //Reserved
        }

        /**
        *
        *  L43 Driver functions.
        *
        **/

        /**
        *
        *  L43/717 functions.
        *
        **/

        /**
        *
        *  Internal functions used by the L43 Driver.
        *
        **/
